--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,14 +5,14 @@
     <h2 class="footer-heading">{{ site.title | escape }}</h2>
 
     <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
+      <div class="footer-col">
+        <p>{{ site.description | escape }}</p>
+      </div>
+
+      <div class="footer-col">
         <ul class="contact-list">
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
-      </div>
-
-      <div class="footer-col footer-col-4">
-        <p>{{ site.description | escape }}</p>
       </div>
     </div>
 
