--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,15 @@
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
+
+      <div class="footer-col">
+        <ul class="contact-list">
+          <li>
+            <a href="/" >{% t global.english %}</a>
+            <a href="/da" >{% t global.danish %}</a>
+          </li>
+        </ul>
+      </div>
     </div>
 
   </div>
