--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,15 +4,13 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
-        <p>{{ site.description | escape }}</p>
-      </div>
-
-      <div class="footer-col">
         <ul class="contact-list">
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
+    </div>
 
+    <div class="footer-col-wrapper">
       <div class="footer-col">
         <ul class="contact-list">
           <li>
